--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "LICENSE",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "clean": "npx rimraf dist",
     "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run build:types",
@@ -62,6 +65,7 @@
     "nock": "^13.3.0",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
+    "semantic-release": "^24.2.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
