--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,13 @@ jobs:
       - uses: actions/checkout@v4
 
       # -------- pnpm + cache ----------
-      - uses: pnpm/action-setup@v4        # installs pnpm (reads version from package.json if present)
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8        # Specify pnpm version (adjust to your preferred version)
       - uses: actions/setup-node@v4
         with:
-          node-version: 20               # single version is fine for lint
-          cache: 'pnpm'                  # enables automatic pnpm-store caching
+          node-version: 20
+          cache: 'pnpm'
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint
@@ -32,6 +34,8 @@ jobs:
 
       # -------- pnpm + cache ----------
       - uses: pnpm/action-setup@v4
+        with:
+          version: 8        # Specify pnpm version
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
@@ -48,6 +52,8 @@ jobs:
 
       # -------- pnpm + cache ----------
       - uses: pnpm/action-setup@v4
+        with:
+          version: 8        # Specify pnpm version
       - uses: actions/setup-node@v4
         with:
           node-version: 20
