--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
           persist-credentials: false
 
       - uses: pnpm/action-setup@v4
+        with:
+          version: 8        # Specify pnpm version
       - uses: actions/setup-node@v4
         with:
           node-version: 20
