--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # -------- pnpm + cache ----------
       - uses: pnpm/action-setup@v4
@@ -20,7 +22,10 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - run: pnpm install --frozen-lockfile
+      # Try with --frozen-lockfile first, fallback to regular install if it fails
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile || pnpm install
+
       - run: pnpm run lint
 
   build:
@@ -28,9 +33,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x] # stable Node versions
+        node-version: [18.x, 20.x, 22.x]
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # -------- pnpm + cache ----------
       - uses: pnpm/action-setup@v4
@@ -41,7 +48,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
-      - run: pnpm install --frozen-lockfile
+      # Try with --frozen-lockfile first, fallback to regular install if it fails
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile || pnpm install
+
       - run: pnpm run build
 
   test:
@@ -49,6 +59,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # -------- pnpm + cache ----------
       - uses: pnpm/action-setup@v4
@@ -59,5 +71,8 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - run: pnpm install --frozen-lockfile
+      # Try with --frozen-lockfile first, fallback to regular install if it fails
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile || pnpm install
+
       - run: pnpm run test 
