--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test": "npx jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:manual": "npx ts-node test/manual-test.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -70,6 +71,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "uuid": "^11.1.0"
-  },
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+  }
 }
