--- a/.github/workflows/semantics.yml
+++ b/.github/workflows/semantics.yml
@@ -1,10 +1,11 @@
 name: Pull Request Semantics
 
 on:
-  pull_request:
-    branches:
-      - master
-    types: [opened, edited, reopened, synchronize]
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - master
+  #   types: [opened, edited, reopened, synchronize]
 
 jobs:
   semantics:
