--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tadata/sdk",
+  "name": "@tadata-org/sdk",
   "version": "0.1.0",
   "description": "Tadata Node SDK",
   "main": "dist/cjs/index.js",
@@ -40,7 +40,8 @@
     "api",
     "sdk",
     "openapi",
-    "mcp"
+    "mcp",
+    "modelcontextprotocol"
   ],
   "author": "Tadata Inc.",
   "license": "MIT",
